work in progress

--- a/index.html
+++ b/index.html
@@ -1,12 +1,315 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Les planètes</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
+  </head>
+  <body class="body parallax">
+    <header>
+      <div class="menu-container">
+        <div>
+          <img src="ressources/logo.svg" alt="logo" width="55" />
+          <nav>
+            <ul>
+              <li><a href="">Mercure</a></li>
+              <li><a href="">Vénus</a></li>
+              <li><a href="">La Terre</a></li>
+              <li><a href="">Mars</a></li>
+              <li><a href="">Jupiter</a></li>
+              <li><a href="">Saturne</a></li>
+              <li><a href="">Uranus</a></li>
+              <li><a href="">Neptune</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+
+    <img class="bg parallax-layer parallax-layer-back" src="ressources/bg.jpg" alt="image de la terre" />
+    <h1 class="title parallax-layer parallax-layer-middle">Les Planétes</h1>
+    <main class="main parallax-layer parallax-layer-base">
+      <div class="content-container">
+        <div class="card">
+          <img class="card-img" src="ressources/mercure.png" alt="Mercure" />
+          <article class="card-content">
+            <h2>Mercure</h2>
+            <div class="properties">
+              <p>Téllurique</p>
+              <p>Antiquité</p>
+            </div>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+              eius soluta cumque quos illo, earum vitae esse ducimus aliquid
+              atque eaque minima quis provident delectus perferendis tempore
+              corrupti. Eum, facilis? Non illum beatae est totam debitis magnam,
+              labore ad alias molestiae itaque, eveniet molestias quidem
+              consequuntur vel animi fugit ut dicta, ullam fugiat corrupti
+              voluptatibus maiores voluptate eius nobis. Aliquam? Rerum aperiam
+              modi optio. Quibusdam eveniet perferendis illo adipisci fugiat
+              accusamus obcaecati possimus, amet veniam voluptas animi dolores
+              esse ad, quidem, maxime perspiciatis nihil cumque nobis doloribus
+              odio! Facilis, quidem? Itaque fugiat labore perspiciatis quam,
+              amet eum dolores recusandae veritatis nulla, id consequuntur omnis
+              cupiditate repellat, consequatur voluptatibus! Debitis animi aut
+              facere rem ab quisquam sed suscipit mollitia iusto magni. Nobis
+              accusamus facilis obcaecati quod. Eligendi est cum laudantium
+              fugiat ab enim a eveniet, molestiae tempora doloribus,
+              consequuntur non earum commodi nam atque numquam doloremque
+              delectus repudiandae. Harum, obcaecati quisquam!
+            </p>
+          </article>
+        </div>
+        <div class="card card-right">
+          <img class="card-img" src="ressources/venus.png" alt="Vénus" />
+          <article>
+            <h2>Vénus</h2>
+            <div class="properties">
+              <p>Téllurique</p>
+              <p>Antiquité</p>
+            </div>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+              eius soluta cumque quos illo, earum vitae esse ducimus aliquid
+              atque eaque minima quis provident delectus perferendis tempore
+              corrupti. Eum, facilis? Non illum beatae est totam debitis magnam,
+              labore ad alias molestiae itaque, eveniet molestias quidem
+              consequuntur vel animi fugit ut dicta, ullam fugiat corrupti
+              voluptatibus maiores voluptate eius nobis. Aliquam? Rerum aperiam
+              modi optio. Quibusdam eveniet perferendis illo adipisci fugiat
+              accusamus obcaecati possimus, amet veniam voluptas animi dolores
+              esse ad, quidem, maxime perspiciatis nihil cumque nobis doloribus
+              odio! Facilis, quidem? Itaque fugiat labore perspiciatis quam,
+              amet eum dolores recusandae veritatis nulla, id consequuntur omnis
+              cupiditate repellat, consequatur voluptatibus! Debitis animi aut
+              facere rem ab quisquam sed suscipit mollitia iusto magni. Nobis
+              accusamus facilis obcaecati quod. Eligendi est cum laudantium
+              fugiat ab enim a eveniet, molestiae tempora doloribus,
+              consequuntur non earum commodi nam atque numquam doloremque
+              delectus repudiandae. Harum, obcaecati quisquam!
+            </p>
+          </article>
+        </div>
+        <div class="card">
+          <img class="card-img" src="ressources/la_terre.png" alt="La Terre" />
+          <article>
+            <h2>La Terre</h2>
+            <div class="properties">
+              <p>Téllurique</p>
+              <p>Antiquité</p>
+            </div>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+              eius soluta cumque quos illo, earum vitae esse ducimus aliquid
+              atque eaque minima quis provident delectus perferendis tempore
+              corrupti. Eum, facilis? Non illum beatae est totam debitis magnam,
+              labore ad alias molestiae itaque, eveniet molestias quidem
+              consequuntur vel animi fugit ut dicta, ullam fugiat corrupti
+              voluptatibus maiores voluptate eius nobis. Aliquam? Rerum aperiam
+              modi optio. Quibusdam eveniet perferendis illo adipisci fugiat
+              accusamus obcaecati possimus, amet veniam voluptas animi dolores
+              esse ad, quidem, maxime perspiciatis nihil cumque nobis doloribus
+              odio! Facilis, quidem? Itaque fugiat labore perspiciatis quam,
+              amet eum dolores recusandae veritatis nulla, id consequuntur omnis
+              cupiditate repellat, consequatur voluptatibus! Debitis animi aut
+              facere rem ab quisquam sed suscipit mollitia iusto magni. Nobis
+              accusamus facilis obcaecati quod. Eligendi est cum laudantium
+              fugiat ab enim a eveniet, molestiae tempora doloribus,
+              consequuntur non earum commodi nam atque numquam doloremque
+              delectus repudiandae. Harum, obcaecati quisquam!
+            </p>
+          </article>
+        </div>
+        <div class="card card-right">
+          <img class="card-img" src="ressources/mars.png" alt="Mars" />
+          <article>
+            <h2>Mars</h2>
+            <div class="properties">
+              <p>Téllurique</p>
+              <p>Antiquité</p>
+            </div>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+              eius soluta cumque quos illo, earum vitae esse ducimus aliquid
+              atque eaque minima quis provident delectus perferendis tempore
+              corrupti. Eum, facilis? Non illum beatae est totam debitis magnam,
+              labore ad alias molestiae itaque, eveniet molestias quidem
+              consequuntur vel animi fugit ut dicta, ullam fugiat corrupti
+              voluptatibus maiores voluptate eius nobis. Aliquam? Rerum aperiam
+              modi optio. Quibusdam eveniet perferendis illo adipisci fugiat
+              accusamus obcaecati possimus, amet veniam voluptas animi dolores
+              esse ad, quidem, maxime perspiciatis nihil cumque nobis doloribus
+              odio! Facilis, quidem? Itaque fugiat labore perspiciatis quam,
+              amet eum dolores recusandae veritatis nulla, id consequuntur omnis
+              cupiditate repellat, consequatur voluptatibus! Debitis animi aut
+              facere rem ab quisquam sed suscipit mollitia iusto magni. Nobis
+              accusamus facilis obcaecati quod. Eligendi est cum laudantium
+              fugiat ab enim a eveniet, molestiae tempora doloribus,
+              consequuntur non earum commodi nam atque numquam doloremque
+              delectus repudiandae. Harum, obcaecati quisquam!
+            </p>
+          </article>
+        </div>
+
+        <h3>ceinture d'asteroïdes</h3>
+
+
+        <div class="card">
+          <img class="card-img" src="ressources/jupiter.png" alt="Jupiter" />
+          <article>
+            <h2>Jupiter</h2>
+            <div class="properties">
+              <p class="properties-gas">Gazeuse</p>
+              <p>Antiquité</p>
+            </div>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+              eius soluta cumque quos illo, earum vitae esse ducimus aliquid
+              atque eaque minima quis provident delectus perferendis tempore
+              corrupti. Eum, facilis? Non illum beatae est totam debitis magnam,
+              labore ad alias molestiae itaque, eveniet molestias quidem
+              consequuntur vel animi fugit ut dicta, ullam fugiat corrupti
+              voluptatibus maiores voluptate eius nobis. Aliquam? Rerum aperiam
+              modi optio. Quibusdam eveniet perferendis illo adipisci fugiat
+              accusamus obcaecati possimus, amet veniam voluptas animi dolores
+              esse ad, quidem, maxime perspiciatis nihil cumque nobis doloribus
+              odio! Facilis, quidem? Itaque fugiat labore perspiciatis quam,
+              amet eum dolores recusandae veritatis nulla, id consequuntur omnis
+              cupiditate repellat, consequatur voluptatibus! Debitis animi aut
+              facere rem ab quisquam sed suscipit mollitia iusto magni. Nobis
+              accusamus facilis obcaecati quod. Eligendi est cum laudantium
+              fugiat ab enim a eveniet, molestiae tempora doloribus,
+              consequuntur non earum commodi nam atque numquam doloremque
+              delectus repudiandae. Harum, obcaecati quisquam!
+            </p>
+          </article>
+        </div>
+        <div class="card card-right">
+          <img class="card-img" src="ressources/saturne.png" alt="Saturme">
+          <article>
+            <h2>Saturn</h2>
+            <div class="properties">
+              <p class="properties-gas">Gazeuse</p>
+              <p>Antiquité</p>
+            </div>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+              eius soluta cumque quos illo, earum vitae esse ducimus aliquid
+              atque eaque minima quis provident delectus perferendis tempore
+              corrupti. Eum, facilis? Non illum beatae est totam debitis magnam,
+              labore ad alias molestiae itaque, eveniet molestias quidem
+              consequuntur vel animi fugit ut dicta, ullam fugiat corrupti
+              voluptatibus maiores voluptate eius nobis. Aliquam? Rerum aperiam
+              modi optio. Quibusdam eveniet perferendis illo adipisci fugiat
+              accusamus obcaecati possimus, amet veniam voluptas animi dolores
+              esse ad, quidem, maxime perspiciatis nihil cumque nobis doloribus
+              odio! Facilis, quidem? Itaque fugiat labore perspiciatis quam,
+              amet eum dolores recusandae veritatis nulla, id consequuntur omnis
+              cupiditate repellat, consequatur voluptatibus! Debitis animi aut
+              facere rem ab quisquam sed suscipit mollitia iusto magni. Nobis
+              accusamus facilis obcaecati quod. Eligendi est cum laudantium
+              fugiat ab enim a eveniet, molestiae tempora doloribus,
+              consequuntur non earum commodi nam atque numquam doloremque
+              delectus repudiandae. Harum, obcaecati quisquam!
+            </p>
+          </article>
+        </div>
+        <div class="card">
+          <img class="card-img" src="ressources/uranus.png" alt="Uranus" />
+          <article>
+            <h2>Uranus</h2>
+            <div class="properties">
+              <p class="properties-gas">Gazeuse</p>
+              <p>Antiquité</p>
+            </div>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+              eius soluta cumque quos illo, earum vitae esse ducimus aliquid
+              atque eaque minima quis provident delectus perferendis tempore
+              corrupti. Eum, facilis? Non illum beatae est totam debitis magnam,
+              labore ad alias molestiae itaque, eveniet molestias quidem
+              consequuntur vel animi fugit ut dicta, ullam fugiat corrupti
+              voluptatibus maiores voluptate eius nobis. Aliquam? Rerum aperiam
+              modi optio. Quibusdam eveniet perferendis illo adipisci fugiat
+              accusamus obcaecati possimus, amet veniam voluptas animi dolores
+              esse ad, quidem, maxime perspiciatis nihil cumque nobis doloribus
+              odio! Facilis, quidem? Itaque fugiat labore perspiciatis quam,
+              amet eum dolores recusandae veritatis nulla, id consequuntur omnis
+              cupiditate repellat, consequatur voluptatibus! Debitis animi aut
+              facere rem ab quisquam sed suscipit mollitia iusto magni. Nobis
+              accusamus facilis obcaecati quod. Eligendi est cum laudantium
+              fugiat ab enim a eveniet, molestiae tempora doloribus,
+              consequuntur non earum commodi nam atque numquam doloremque
+              delectus repudiandae. Harum, obcaecati quisquam!
+            </p>
+          </article>
+        </div>
+        <div class="card card-right">
+          <img class="card-img" src="ressources/neptune.png" alt="Neptune" />
+          <article>
+            <h2>Neptune</h2>
+            <div class="properties">
+              <p class="properties-gas">Gazeuse</p>
+              <p>Antiquité</p>
+            </div>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+              eius soluta cumque quos illo, earum vitae esse ducimus aliquid
+              atque eaque minima quis provident delectus perferendis tempore
+              corrupti. Eum, facilis? Non illum beatae est totam debitis magnam,
+              labore ad alias molestiae itaque, eveniet molestias quidem
+              consequuntur vel animi fugit ut dicta, ullam fugiat corrupti
+              voluptatibus maiores voluptate eius nobis. Aliquam? Rerum aperiam
+              modi optio. Quibusdam eveniet perferendis illo adipisci fugiat
+              accusamus obcaecati possimus, amet veniam voluptas animi dolores
+              esse ad, quidem, maxime perspiciatis nihil cumque nobis doloribus
+              odio! Facilis, quidem? Itaque fugiat labore perspiciatis quam,
+              amet eum dolores recusandae veritatis nulla, id consequuntur omnis
+              cupiditate repellat, consequatur voluptatibus! Debitis animi aut
+              facere rem ab quisquam sed suscipit mollitia iusto magni. Nobis
+              accusamus facilis obcaecati quod. Eligendi est cum laudantium
+              fugiat ab enim a eveniet, molestiae tempora doloribus,
+              consequuntur non earum commodi nam atque numquam doloremque
+              delectus repudiandae. Harum, obcaecati quisquam!
+            </p>
+          </article>
+        </div>
+      </div>
+    </main>
+
+    <footer>
+      <div>
+        <section>
+          <h2>Les Télluriques</h2>
+          <ul>
+            <li><a href="">Mercure</a></li>
+            <li><a href="">Vénus</a></li>
+            <li><a href="">La Terre</a></li>
+            <li><a href="">Mars</a></li>
+          </ul>
+        </section>
+        <section>
+          <h2>Les Télluriques</h2>
+          <ul>
+            <li><a href="">Mercure</a></li>
+            <li><a href="">Vénus</a></li>
+            <li><a href="">La Terre</a></li>
+            <li><a href="">Mars</a></li>
+          </ul>
+        </section>
+        <section>
+          <h2>Les Télluriques</h2>
+          <ul>
+            <li><a href="">Mercure</a></li>
+            <li><a href="">Vénus</a></li>
+            <li><a href="">La Terre</a></li>
+            <li><a href="">Mars</a></li>
+          </ul>
+        </section>
+        <p>Maquette réalisée dans un but pédagogique par M.PETIT Louis...</p>
+      </div>
+    </footer>
+  </body>
 </html>
