index and styles upd

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <meta
       name="description"
       content="Explorez les planètes du système solaire : caractéristiques, images, et informations détaillées sur les planètes télluriques et gazeuses.">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="ressources/logo.svg" type="image/x-icon">
+    <title>Les Planètes</title>
   </head>
   <body class="body">
     <header>
@@ -20,54 +24,64 @@
               <li>
                 <a
                   href="https://fr.wikipedia.org/wiki/Mercure_(planète)"
-                  target="_blank" aria-label="rediriger vers la page wikipedia"
+                  target="_blank"
+                  aria-label="rediriger vers la page wikipedia"
                   >Mercure</a
                 >
               </li>
               <li>
                 <a
                   href="https://fr.wikipedia.org/wiki/Vénus_(planète)"
-                  target="_blank" aria-label="rediriger vers la page wikipedia"
+                  target="_blank"
+                  aria-label="rediriger vers la page wikipedia"
                   >Vénus</a
                 >
               </li>
               <li>
-                <a href="https://fr.wikipedia.org/wiki/Terre" target="_blank" aria-label="rediriger vers la page wikipedia"
+                <a
+                  href="https://fr.wikipedia.org/wiki/Terre"
+                  target="_blank"
+                  aria-label="rediriger vers la page wikipedia"
                   >La Terre</a
                 >
               </li>
               <li>
                 <a
                   href="https://fr.wikipedia.org/wiki/Mars_(planète)"
-                  target="_blank" aria-label="rediriger vers la page wikipedia"
+                  target="_blank"
+                  aria-label="rediriger vers la page wikipedia"
                   >Mars</a
                 >
               </li>
               <li>
                 <a
                   href="https://fr.wikipedia.org/wiki/Jupiter_(planète)"
-                  target="_blank" aria-label="rediriger vers la page wikipedia"
+                  target="_blank"
+                  aria-label="rediriger vers la page wikipedia"
                   >Jupiter</a
                 >
               </li>
               <li>
                 <a
                   href="https://fr.wikipedia.org/wiki/Saturne_(planète)"
-                  target="_blank" aria-label="rediriger vers la page wikipedia"
+                  target="_blank"
+                  aria-label="rediriger vers la page wikipedia"
                   >Saturne</a
                 >
               </li>
               <li>
                 <a
                   href="https://fr.wikipedia.org/wiki/Uranus_(planète)"
-                  target="_blank" aria-label="rediriger vers la page wikipedia"
+                  target="_blank"
+                  aria-label="rediriger vers la page wikipedia"
                   >Uranus</a
                 >
               </li>
               <li>
                 <a
                   href="https://fr.wikipedia.org/wiki/Neptune_(planète)"
-                  target="_blank" aria-label="rediriger vers la page wikipedia"
+                  target="_blank"
+                  aria-label="rediriger vers la page wikipedia"
                   >Neptune</a
                 >
               </li>
@@ -96,7 +110,8 @@
             <a
               class="read-more"
               href="https://fr.wikipedia.org/wiki/Mercure_(planète)"
-              target="_blank" aria-label="rediriger vers la page wikipedia"
+              target="_blank"
+              aria-label="rediriger vers la page wikipedia"
               >En savoir plus</a
             >
           </p>
@@ -119,7 +134,8 @@
             que toute autre planète du Système solaire.<a
               class="read-more"
               href="https://fr.wikipedia.org/wiki/Vénus_(planète)"
-              target="_blank" aria-label="rediriger vers la page wikipedia"
+              target="_blank"
+              aria-label="rediriger vers la page wikipedia"
               >En savoir plus</a
             >
           </p>
@@ -141,7 +157,8 @@
             <a
               class="read-more"
               href="https://fr.wikipedia.org/wiki/Terre"
-              target="_blank" aria-label="rediriger vers la page wikipedia"
+              target="_blank"
+              aria-label="rediriger vers la page wikipedia"
               >En savoir plus</a
             >
           </p>
@@ -164,7 +181,8 @@
             jours martiens (686,71 jours ou 1,88 année terrestre).<a
               class="read-more"
               href="https://fr.wikipedia.org/wiki/Mars_(planète)"
-              target="_blank" aria-label="rediriger vers la page wikipedia"
+              target="_blank"
+              aria-label="rediriger vers la page wikipedia"
               >En savoir plus</a
             >
           </p>
@@ -188,7 +206,8 @@
             grande.<a
               class="read-more"
               href="https://fr.wikipedia.org/wiki/Jupiter_(planète)"
-              target="_blank" aria-label="rediriger vers la page wikipedia"
+              target="_blank"
+              aria-label="rediriger vers la page wikipedia"
               >En savoir plus</a
             >
           </p>
@@ -212,7 +231,8 @@
             <a
               class="read-more"
               href="https://fr.wikipedia.org/wiki/Saturne_(planète)"
-              target="_blank" aria-label="rediriger vers la page wikipedia"
+              target="_blank"
+              aria-label="rediriger vers la page wikipedia"
               >En savoir plus</a
             >
           </p>
@@ -235,7 +255,8 @@
             Système solaire et de la troisième plus grande par la taille.<a
               class="read-more"
               href="https://fr.wikipedia.org/wiki/Uranus_(planète)"
-              target="_blank" aria-label="rediriger vers la page wikipedia"
+              target="_blank"
+              aria-label="rediriger vers la page wikipedia"
               >En savoir plus</a
             >
           </p>
@@ -258,7 +279,8 @@
             période de révolution de 164,79 ans.<a
               class="read-more"
               href="https://fr.wikipedia.org/wiki/Neptune_(planète)"
-              target="_blank" aria-label="rediriger vers la page wikipedia"
+              target="_blank"
+              aria-label="rediriger vers la page wikipedia"
               >En savoir plus</a
             >
           </p>
@@ -268,39 +290,102 @@
       <h3 class="title">ceinture d'asteroïdes</h3>
     </main>
 
-    <div class="footer-container">
-      <footer class="footer">
+    <footer class="footer-container">
+      <div class="footer">
         <div class="footer-content">
           <section>
             <h2>Les Télluriques</h2>
             <ul>
-              <li><a href="https://fr.wikipedia.org/wiki/Mercure_(planète)"
-                target="_blank" aria-label="rediriger vers la page wikipedia">Mercure</a></li>
-              <li><a href="https://fr.wikipedia.org/wiki/Vénus_(planète)"
-                target="_blank" aria-label="rediriger vers la page wikipedia">Vénus</a></li>
-              <li><a href="https://fr.wikipedia.org/wiki/Terre" target="_blank" aria-label="rediriger vers la page wikipedia">La Terre</a></li>
-              <li><a href="https://fr.wikipedia.org/wiki/Mars_(planète)"
-                target="_blank" aria-label="rediriger vers la page wikipedia">Mars</a></li>
+              <li>
+                <a
+                  href="https://fr.wikipedia.org/wiki/Mercure_(planète)"
+                  target="_blank"
+                  aria-label="rediriger vers la page wikipedia"
+                  >Mercure</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://fr.wikipedia.org/wiki/Vénus_(planète)"
+                  target="_blank"
+                  aria-label="rediriger vers la page wikipedia"
+                  >Vénus</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://fr.wikipedia.org/wiki/Terre"
+                  target="_blank"
+                  aria-label="rediriger vers la page wikipedia"
+                  >La Terre</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://fr.wikipedia.org/wiki/Mars_(planète)"
+                  target="_blank"
+                  aria-label="rediriger vers la page wikipedia"
+                  >Mars</a
+                >
+              </li>
             </ul>
           </section>
           <section>
             <h2>Les Gazeuse</h2>
             <ul>
-              <li><a href="https://fr.wikipedia.org/wiki/Jupiter_(planète)"
-                target="_blank" aria-label="rediriger vers la page wikipedia">Jupiter</a></li>
-              <li><a href="https://fr.wikipedia.org/wiki/Saturne_(planète)"
-                target="_blank" aria-label="rediriger vers la page wikipedia">Saturn</a></li>
-              <li><a href="https://fr.wikipedia.org/wiki/Uranus_(planète)"
-                target="_blank" aria-label="rediriger vers la page wikipedia">Uranus</a></li>
-              <li><a href="https://fr.wikipedia.org/wiki/Neptune_(planète)"
-                target="_blank" aria-label="rediriger vers la page wikipedia">Neptune</a></li>
+              <li>
+                <a
+                  href="https://fr.wikipedia.org/wiki/Jupiter_(planète)"
+                  target="_blank"
+                  aria-label="rediriger vers la page wikipedia"
+                  >Jupiter</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://fr.wikipedia.org/wiki/Saturne_(planète)"
+                  target="_blank"
+                  aria-label="rediriger vers la page wikipedia"
+                  >Saturn</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://fr.wikipedia.org/wiki/Uranus_(planète)"
+                  target="_blank"
+                  aria-label="rediriger vers la page wikipedia"
+                  >Uranus</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://fr.wikipedia.org/wiki/Neptune_(planète)"
+                  target="_blank"
+                  aria-label="rediriger vers la page wikipedia"
+                  >Neptune</a
+                >
+              </li>
             </ul>
           </section>
           <section>
             <h2>Partenaires</h2>
             <ul>
-              <li><a href="https://www.cieletespace.fr" target="_blank" aria-label="rediriger vers la page cieletespace">Ciel & Espace</a></li>
-              <li><a href="https://gallica.bnf.fr/ark:/12148/bd6t54240964d" target="_blank" aria-label="rediriger vers la page gallica">Le journal du Ciel</a></li>
+              <li>
+                <a
+                  href="https://www.cieletespace.fr"
+                  target="_blank"
+                  aria-label="rediriger vers la page cieletespace"
+                  >Ciel & Espace</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://gallica.bnf.fr/ark:/12148/bd6t54240964d"
+                  target="_blank"
+                  aria-label="rediriger vers la page gallica"
+                  >Le journal du Ciel</a
+                >
+              </li>
             </ul>
           </section>
         </div>
@@ -308,7 +393,7 @@
           Maquette réalisée dans un but pédagogique par© M. PETIT Louis | M.
           VIGREUX Joël | M. GIVRY Simon | M. MOY Yohann
         </p>
-      </footer>
-    </div>
+      </div>
+    </footer>
   </body>
 </html>
